[package]
name = "rust-nation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
jsonwebtoken = "9.2.0"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
tokio = "1.28.2"
tower-jwt = "0.2.0"
